media quiries and added classes

--- a/index.html
+++ b/index.html
@@ -26,19 +26,19 @@
                 </label>
 
                 <Label>Which is your main platform for gaming?</Label>
-                <label for="desktop"><input type="radio" id="desktop" name="platform" value="desktop" />Desktop</label>
-                <label for="console"><input type="radio" id="console" name="platform" value="console" />Console</label>
-                <label for="mobile"><input type="radio" id="mobile" name="platform" value="mobile" />Mobile</label>
-                <label for="other"><input type="radio" id="other" name="platform" value="other"/>Other</label>
+                <label for="desktop" class="options"><input type="radio" id="desktop" name="platform" value="desktop" />Desktop</label>
+                <label for="console" class="options"><input type="radio" id="console" name="platform" value="console" />Console</label>
+                <label for="mobile" class="options"><input type="radio" id="mobile" name="platform" value="mobile" />Mobile</label>
+                <label for="other" class="options"><input type="radio" id="other" name="platform" value="other"/>Other</label>
                 
                 <label>What genre do you play? (select all that apply)</label>
-                <label for="action"><input type="checkbox" id="action" name="genre" value="action"/>Action</label>
-                <label for="adventure"><input type="checkbox" id="adventure" name="genre" value="adventure"/>Adventure</label>
-                <label for="arcade"><input type="checkbox" id="arcade" name="genre" value="arcade"/>Arcade</label>
-                <label for="fps"><input type="checkbox" id="fps" name="genre" value="fps">FPS</label>
-                <label for="puzzle"><input type="checkbox" id="puzzle" name="genre" value="puzzle"/>Puzzle</label>
-                <label for="racing"><input type="checkbox" id="racing" name="genre" value="racing"/>Racing</label>
-                <label for="role-playing"><input type="checkbox" id="role-playing" name="genre" value="role-playing">Role Playing</label>
+                <label for="action" class="options"><input type="checkbox" id="action" name="genre" value="action"/>Action</label>
+                <label for="adventure" class="options"><input type="checkbox" id="adventure" name="genre" value="adventure"/>Adventure</label>
+                <label for="arcade" class="options"><input type="checkbox" id="arcade" name="genre" value="arcade"/>Arcade</label>
+                <label for="fps" class="options"><input type="checkbox" id="fps" name="genre" value="fps">FPS</label>
+                <label for="puzzle" class="options"><input type="checkbox" id="puzzle" name="genre" value="puzzle"/>Puzzle</label>
+                <label for="racing" class="options"><input type="checkbox" id="racing" name="genre" value="racing"/>Racing</label>
+                <label for="role-playing" class="options"><input type="checkbox" id="role-playing" name="genre" value="role-playing">Role Playing</label>
 
                 <label for="comments">Comments or Suggestions?
                     <textarea id="comments" name="comments" placeholder="Please provide us with feedback..." row="7" cols="50"></textarea>
